# jobdone

./: .jobdone.yaml.template  JOBDONE_SPEC.md  LICENSE  Makefile  README.md  jobdone.spec  pyproject.toml
.github/workflows/: makefile.yml
src/jobdone/: __init__.py  cli.py
src/jobdone.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
